--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "license": "MIT",
   "homepage": "https://mayareu.github.io/comet",
   "scripts": {
+    "start": "nx serve",
+    "build": "nx build",
+    "test": "nx test",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -60,6 +63,7 @@
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "webpack-cli": "^5.0.1"
   }
 }
